@@ -41,6 +41,10 @@ def list_lrzip (archive, encoding, cmd, **kwargs):
     """List a LRZIP archive."""
     return stripext(cmd, archive)
 
+def list_rzip (archive, encoding, cmd, **kwargs):
+    """List a RZIP archive."""
+    return stripext(cmd, archive)
+
 def stripext (cmd, archive):
     """Echo the name without suffix."""
     return [cmd, util.stripext(archive)]
